<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_tracking_application"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        android:padding="3sp"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:background="@color/black"
        tools:ignore="SmallSp" />
    <Button
        android:id="@+id/activity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/find_latitude_and_longitude"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="4sp"
        android:layout_margin="20sp"
        />

    <Button
        android:id="@+id/activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/geo_location"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="4sp"
        android:layout_margin="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            tools:ignore="SmallSp" />
    </RelativeLayout>
</LinearLayout>