<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".latandlong">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Know your latitude and longitude"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/teal_200"
        android:padding="3sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10sp"
        android:background="@color/black"
        tools:ignore="SmallSp" />
    <LinearLayout

        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="40sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="5sp"
            />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="5sp"
            />
    </LinearLayout>

    <LinearLayout

        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="40sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="5sp"
            />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="5sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/find"
        android:backgroundTint="@color/teal_200"
        android:text="Find"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
       android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="20sp"
           android:layout_alignParentBottom="true"
           android:background="@color/black"
           tools:ignore="SmallSp" />
   </RelativeLayout>
</LinearLayout>